@@ -6,3 +6,4 @@ Help: digits(x,{b=10}): gives the vector formed by the digits of x in base b (x 
  integers).
 Doc:
  outputs the vector of the digits of $|x|$ in base $b$, where $x$ and $b$ are integers.
+ See \kbd{fromdigits} for the reverse operation.
