@@ -1,8 +1,11 @@
 []
 []
+0
 [7, 8, 8, 8, 6, 0, 9, 0, 5, 2, 2, 1, 0, 1, 1, 8, 0, 5, 4, 1, 1, 7, 2, 8, 5, 
 6, 5, 2, 8, 2, 7, 8, 6, 2, 2, 9, 6, 7, 3, 2, 0, 6, 4, 3, 5, 1, 0, 9, 0, 2, 3
 , 0, 0, 4, 7, 7, 0, 2, 7, 8, 9, 3, 0, 6, 6, 4, 0, 6, 2, 5]
+1234560123456012345601234560123456012345601234560123456012345601234560123456
+012345601234560123456012
 0
 12
 135
@@ -32,4 +35,4 @@
 [16, 21, 21, 21, 19, 27, 43, 45, 45, 39]
 [1, 0, 3]
 4
-Total time spent: 104
+Total time spent: 68
