@@ -1,7 +1,9 @@
 binary(0)
 digits(0)
+fromdigits([])
 digits(5^100)
-check(a,b)=my(v=digits(a,b));if(subst(Pol(v),'x,b)!=a || vecmax(v)>=b,error([a,b]));
+fromdigits(vector(100,i,i%7))
+check(a,b)=my(v=digits(a,b));if(subst(Pol(v),'x,b)!=a || vecmax(v)>=b || fromdigits(v,b)!=a,error([a,b]));
 check(5^100,2)
 check(5^100,3)
 check(3^100,2^64-1)
